<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>MyHome</groupId>
	<artifactId>MyHome</artifactId>
	<version>3.0</version>
	<packaging>war</packaging>
	<name>MyHome</name>
	<url>my-home.ovh</url>
	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
	<!-- Dependencies -->
	<dependencies>
		<!-- Jakarta Servlet -->
		<!-- https://mvnrepository.com/artifact/jakarta.servlet/jakarta.servlet-api -->
		<dependency>
		    <groupId>jakarta.servlet</groupId>
		    <artifactId>jakarta.servlet-api</artifactId>
		    <version>6.1.0</version>
		    <scope>provided</scope>
		</dependency>
		<!-- Jakarta Server Pages API -->
		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp/jakarta.servlet.jsp-api -->
		<dependency>
		    <groupId>jakarta.servlet.jsp</groupId>
		    <artifactId>jakarta.servlet.jsp-api</artifactId>
		    <version>4.0.0</version>
		    <scope>provided</scope>
		</dependency>
		<!-- Jakarta Standard Tag Library API -->
		<!-- https://mvnrepository.com/artifact/jakarta.servlet.jsp.jstl/jakarta.servlet.jsp.jstl-api -->
		<dependency>
		    <groupId>jakarta.servlet.jsp.jstl</groupId>
		    <artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
		    <version>3.0.2</version>
		</dependency>
		<!-- Jakarta Standard Tag Library Implementation -->
		<!-- https://mvnrepository.com/artifact/org.glassfish.web/jakarta.servlet.jsp.jstl -->
		<dependency>
		    <groupId>org.glassfish.web</groupId>
		    <artifactId>jakarta.servlet.jsp.jstl</artifactId>
		    <version>3.0.1</version>
		</dependency>
		<!-- Google API Client -->
		<!-- https://mvnrepository.com/artifact/com.google.api-client/google-api-client -->
		<dependency>
		    <groupId>com.google.api-client</groupId>
		    <artifactId>google-api-client</artifactId>
		    <version>2.7.1</version>
		</dependency>
		<!-- Google OAuth Client -->
		<!-- https://mvnrepository.com/artifact/com.google.oauth-client/google-oauth-client -->
		<dependency>
		    <groupId>com.google.oauth-client</groupId>
		    <artifactId>google-oauth-client</artifactId>
		    <version>1.37.0</version>
		</dependency>
		<!-- YouTube Data API v3 Client -->
		<!-- https://github.com/googleapis/google-api-java-client-services/tree/main/clients/google-api-services-youtube/v3 -->
		<dependency>
			<groupId>com.google.apis</groupId>
			<artifactId>google-api-services-youtube</artifactId>
			<version>v3-rev20250101-2.0.0</version>
		</dependency>
		<!-- GSON Extensions -->
		<!-- https://mvnrepository.com/artifact/com.google.http-client/google-http-client-gson -->
		<dependency>
		    <groupId>com.google.http-client</groupId>
		    <artifactId>google-http-client-gson</artifactId>
		    <version>1.45.3</version>
		</dependency>
		<!-- JSoup Java HTML Parser -->
		<!-- https://mvnrepository.com/artifact/org.jsoup/jsoup -->
		<dependency>
		    <groupId>org.jsoup</groupId>
		    <artifactId>jsoup</artifactId>
		    <version>1.18.3</version>
		</dependency>
		<!-- Apache Commons Email -->
		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-email -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-email</artifactId>
		    <version>1.6.0</version>
		</dependency>
		<!-- Jakarta Persistence API -->
		<!-- https://mvnrepository.com/artifact/jakarta.persistence/jakarta.persistence-api -->
		<dependency>
		    <groupId>jakarta.persistence</groupId>
		    <artifactId>jakarta.persistence-api</artifactId>
		    <version>3.2.0</version>
		</dependency>
		<!-- MariaDB -->
		<!-- https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client -->
		<dependency>
		    <groupId>org.mariadb.jdbc</groupId>
		    <artifactId>mariadb-java-client</artifactId>
		    <version>3.5.1</version>
		</dependency>
		<!-- Hibernate -->
		<!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
		<dependency>
		    <groupId>org.hibernate</groupId>
		    <artifactId>hibernate-core</artifactId>
		    <version>6.6.4.Final</version>
		</dependency>
		<!-- Byte Buddy -->
		<!-- https://mvnrepository.com/artifact/net.bytebuddy/byte-buddy -->
		<dependency>
		    <groupId>net.bytebuddy</groupId>
		    <artifactId>byte-buddy</artifactId>
		    <version>1.15.11</version>
		</dependency>
		<!-- Apache Log4j Core -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-core -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-core</artifactId>
		    <version>2.24.3</version>
		</dependency>
		<!-- Apache Log4j API -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-api -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-api</artifactId>
		    <version>2.24.3</version>
		</dependency>
		<!-- Apache Log4j SLF4J 2.0 Binding -->
		<!-- https://mvnrepository.com/artifact/org.apache.logging.log4j/log4j-slf4j2-impl -->
		<dependency>
		    <groupId>org.apache.logging.log4j</groupId>
		    <artifactId>log4j-slf4j2-impl</artifactId>
		    <version>2.24.3</version>
		</dependency>
		<!-- SLF4J API Module -->
		<!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-api -->
		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>2.0.16</version>
		</dependency>
		<!-- JUnit Jupiter -->
		<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter-api</artifactId>
		    <version>5.11.4</version>
		    <scope>test</scope>
		</dependency>
		<!-- Maven Surefire Plugin -->
		<!-- https://mvnrepository.com/artifact/org.apache.maven.plugins/maven-surefire-plugin -->
		<dependency>
		    <groupId>org.apache.maven.plugins</groupId>
		    <artifactId>maven-surefire-plugin</artifactId>
		    <version>3.5.2</version>
		</dependency>				
	</dependencies>
	<!-- Build -->
	<build>
		<finalName>MyHome</finalName>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
				<configuration>
					<source>21</source>
					<target>21</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.5.2</version>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.4.0</version>
				<configuration>
					<webappDirectory>src/main/webapp</webappDirectory>
				</configuration>
			</plugin>
			<plugin>
		        <groupId>org.apache.maven.plugins</groupId>
		        <artifactId>maven-resources-plugin</artifactId>
		        <version>3.3.1</version>
		        <configuration>
		            <resources>
		                <resource>
		                    <directory>src/main/resources</directory>
		                </resource>
		            </resources>
		        </configuration>
		    </plugin>
		</plugins>
	</build>
</project>
